--- a/koko-caitlin/package.json
+++ b/koko-caitlin/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/splitpeasoup/07-nodejs-npm-express#readme",
   "dependencies": {
     "express": "^4.16.2",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "save": "^2.3.2"
   }
 }
