--- a/koko-caitlin/package.json
+++ b/koko-caitlin/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/splitpeasoup/07-nodejs-npm-express#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "lodash": "^4.17.4",
+    "nodemon": "^1.12.6",
     "save": "^2.3.2"
   }
 }
